2006-04-16  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c:
    * src/seahorse-key-manager.c: Make site links in the 
    About dialogs clickable.
    * help/C/seahorse.xml: Update copyright information and 
    document unexposed GConf key. 

2006-04-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-operation.c: Add license
    to seahorse-pgp-operation.c
    
2006-04-15  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c: Fix compilation 
    problem on x64. Fixes bug #338651
    
2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * README:
    * NEWS: Version 0.9.1
    * Makefile.am:
    * daemon/Makefile.am: Cleanup built files properly
    * configure.in: Update version number to 0.9.2

2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * autogen.sh: Require automake 1.9
    * Makefile.am:
    * configure.in:
    * xmldocs.make (removed):
    * help/Makefile.am:
    * help/seahorse.omf.in (added):
    * help/C/Makefile.am (removed):
    * help/C/seahorse-C.omf (removed):
    * help/C/seahorse.xml: 
    * plugins/applet/docs/Makefile.am:
    * plugins/applet/docs/seahorse-applet.omf.in (added):
    * plugins/applet/C/Makefile.am (removed):
    * plugins/applet/C/seahorse-applet-C.omf (removed): Migrate to 
    gnome-doc-utils. Fixes #327441    

2006-04-14  Nate Nielsen  <nielsen@memberwebs.com>

    * COPYING-LIBCRYPTUI (added):
    * configure.in: 
    * libcryptui/Makefile.am: Install libcryptui library properly
    * daemon/Makefile.am: Include missing files in tarball
    
2006-04-13  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/gedit/Makefile.am:
    * plugins/gedit/seahorse-gedit-plugin.c: Fix build of gedit 
    2.14 plugin. 
    
2006-04-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-operation.c: Fix problem where multi
    operations aren't cleaned up properly, leading to random 