@@ -1,3 +1,8 @@
+2006-04-17  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-context.c: Fix how 
+    seahorse_context_remove_key_source works.
+    
 2006-04-16  Adam Schreiber  <sadam@clemson.edu>
 
     * plugins/applet/seahorse-applet.c:
